docs: arruma o "erro" de nao atualizar o user no Swagger (era so uma virgula hahahhahhhahhhahahhahhahhhahhhhahah)
feat: adiciona o hash de senha antes de atualizar um usuario
